--- a/source/_posts/2019-12-31-websockt简单使用.md
+++ b/source/_posts/2019-12-31-websockt简单使用.md
@@ -8,7 +8,7 @@ tags:
 ### 前提
 碰到个需求，项目中预警数量这个数值需要后端实时推送到前端展示。
 
-引入websocket插件[websocket-heartbeat-js](!https://github.com/zimv/websocket-heartbeat-js)可以实现该功能。
+引入websocket插件[websocket-heartbeat-js](https://github.com/zimv/websocket-heartbeat-js)可以实现该功能。
 
 
 ### 安装引入WebsocketHeartbeatJs插件
@@ -59,7 +59,7 @@ import WebsocketHeartbeatJs from 'websocket-heartbeat-js'
 ### 想到另一个demo
 
 想起来之前接手了个老项目，后端用.net写的，也要实现ws功能。
-后来找到个[signalr](!https://github.com/zjy7/hexoBlog/blob/master/source/_posts/2019-12-31-websockt%E7%AE%80%E5%8D%95%E4%BD%BF%E7%94%A8/signalr.js)插件实现了。
+后来找到个[signalr](https://github.com/zjy7/hexoBlog/blob/master/source/_posts/2019-12-31-websockt%E7%AE%80%E5%8D%95%E4%BD%BF%E7%94%A8/signalr.js)插件实现了。
 
 代码如下：
 ```javascript
