--- a/source/_drafts/个人独资公司章程模板2.md
+++ b/source/_drafts/个人独资公司章程模板2.md
@@ -25,13 +25,13 @@ tags:
 
 　　第八条 本企业投资人为一个自然人，申报的出资为6万元，其中现金：6万元。
 
-　　第三章　财务、会计和劳动工资<a href="/gongwen/zhidu/" target="_blank"><u>制度</u></a>
+　　第三章　财务、会计和劳动工资制度
 
 　　第九条 本企业按国家有关法律法规，制定财务、会计制度、依法设置会计帐簿，进行会计核算。
 
 　　第十条　本企业会计年度采用公历年制，自当年一月一日起至十二月三十一日止为一个会计年度。
 
-　　第十一条　本企业招用职工的，依法与职工签订劳动<a href="/gongwen/hetong/" target="_blank"><u>合同</u></a>，保障职工的劳动安全，按时、足额发放职工工资，按照国家<a href="/gongwen/guiding/" target="_blank"><u>规定</u></a>参加社会保险，为职工缴纳社会保险费。
+　　第十一条　本企业招用职工的，依法与职工签订劳动合同，保障职工的劳动安全，按时、足额发放职工工资，按照国家规定参加社会保险，为职工缴纳社会保险费。
 
 　　第四章 企业的解散和清算
 
@@ -39,7 +39,7 @@ tags:
 
 　　第十三条　企业有下列情形之一时，应当解散;
 
-　　(一)投资人<a href="/gongwen/jueding/" target="_blank"><u>决定</u></a>解散;
+　　(一)投资人决定解散;
 
 　　(二)投资人死亡或者被宣告死亡，无继承人或者继承人决定放弃继承;
 
@@ -47,7 +47,7 @@ tags:
 
 　　(四)法律、行政法规规定的其他情形。
 
-　　第十四条　企业解散，由投资人自行清算或者由债权人申请人民法院指定清算人进行清算。投资人自行清算的，应当在清算前十五日内书面<a href="/gongwen/tongzhi/" target="_blank"><u>通知</u></a>债权人，无法通知的，应当予以<a href="/gongwen/gonggao/" target="_blank"><u>公告</u></a>。债权人应当在接到通知之日起三十日内，未接到通知的应当在公告之日起六十日内，向投资人申报其债权。
+　　第十四条　企业解散，由投资人自行清算或者由债权人申请人民法院指定清算人进行清算。投资人自行清算的，应当在清算前十五日内书面通知债权人，无法通知的，应当予以公告。债权人应当在接到通知之日起三十日内，未接到通知的应当在公告之日起六十日内，向投资人申报其债权。
 
 　　第十五条　企业解散后，原投资人对个人独资企业存续期间的债务仍应承担偿还责任，但债权人在五年内未向债务人提出偿债请求的，该责任消灭。
 
@@ -63,7 +63,7 @@ tags:
 
 　　第十八条企业财产不足以清偿债务的，投资人应当以其个人的其他财产予以清偿。
 
-　　第十九条企业清算结束后，投资人或者人民法院指定的清算人应当编制清算<a href="/gongwen/baogao/" target="_blank"><u>报告</u></a>，并于十五日内到登记机关办理注销登记。
+　　第十九条企业清算结束后，投资人或者人民法院指定的清算人应当编制清算报告，并于十五日内到登记机关办理注销登记。
 
 　　第五章 附 则
 
@@ -113,6 +113,6 @@ tags:
 
 　　(三)法定登记手续不同
 
-　　一人有限责任公司的股东出资经依法设立的验资机构验资后，由其或其委托的代理人向公司登记机关报送公司登记<a href="/gongwen/shenqingshu/" target="_blank"><u>申请书</u></a>、公司章程、验资证明等文件，申请设立登记;而申请设立个人独资企业，应当由投资人或者其委托的代理人向个人独资企业所在地的登记机关提交设立申请书、投资人身份证明、生产经营场所使用证明等文件。委托代理人申请设立登记时，应当出具投资人的委托书和代理人的合法证明。其中设立申请书应当载明企业的名称和住所、投资人的姓名和居所、投资人的出资额和出资方式以及经营范围。一人有限责任公司领取的是公司营业执照，个人独资企业领取的是个人独资企业营业执照。
+　　一人有限责任公司的股东出资经依法设立的验资机构验资后，由其或其委托的代理人向公司登记机关报送公司登记申请书、公司章程、验资证明等文件，申请设立登记;而申请设立个人独资企业，应当由投资人或者其委托的代理人向个人独资企业所在地的登记机关提交设立申请书、投资人身份证明、生产经营场所使用证明等文件。委托代理人申请设立登记时，应当出具投资人的委托书和代理人的合法证明。其中设立申请书应当载明企业的名称和住所、投资人的姓名和居所、投资人的出资额和出资方式以及经营范围。一人有限责任公司领取的是公司营业执照，个人独资企业领取的是个人独资企业营业执照。
 
 
