--- a/source/_posts/2020-04-24-伤仲永.md
+++ b/source/_posts/2020-04-24-伤仲永.md
@@ -3,6 +3,7 @@ title: 伤仲永
 date: 2020-04-24 13:47:54
 tags:
 categories:
+- Life
 ---
 
 ## 金溪民方仲永，世隶耕。仲永生五年，未尝识书具，忽啼求之。父异焉，借旁近与之，即书诗四句，并自为其名。其诗以养父母、收族为意，传一乡秀才观之。自是指物作诗立就，其文理皆有可观者。邑人奇之，稍稍宾客其父，或以钱币乞之。父利其然也，日扳仲永环谒于邑人，不使学。
