--- a/source/_posts/2020-01-18-信用卡首年次年.md
+++ b/source/_posts/2020-01-18-信用卡首年次年.md
@@ -2,6 +2,8 @@
 title: 信用卡首年次年
 date: 2020-01-18 17:34:59
 tags:
+categories:
+- Life
 ---
 1、所有银行的信用卡首年都是指卡片核发的12个月内，不是自然年。
 　　比如：07年12月核发的信用卡，首年至08年11月31日止。
