--- a/source/_posts/2020-04-24-hexo-g后生成空白页面.md
+++ b/source/_posts/2020-04-24-hexo-g后生成空白页面.md
@@ -10,7 +10,8 @@ categories:
 在nodejs版本为v14.0.0的情况下，hexo g生产的页面都是空文件
 
 显示如下：
-{% asset_img empytfile.png %}
+
+{% asset_img emptyfile.png emptyfile %}
 
 ## 解决
 
