--- a/source/_posts/2020-07-30-Bookmark.md
+++ b/source/_posts/2020-07-30-Bookmark.md
@@ -13,5 +13,7 @@ categories:
 - [.gitignore](https://docs.github.com/en/github/using-git/ignoring-files)
 - [editorConfig](https://editorconfig.org/)
 - [Regex Golf](https://alf.nu/RegexGolf#accesstoken=1xmItQFSl/PXYPpt2Je2)
-- 
-- 
+- [Example Scripts for PhantomJS](https://phantomjs.org/examples.html)
+- [packal](http://www.packal.org/)
+- [nodelover](https://nodelover.me/courses)
+- [opsschool](http://www.opsschool.org/)
