--- a/source/_posts/2020-07-30-Bookmark.md
+++ b/source/_posts/2020-07-30-Bookmark.md
@@ -4,6 +4,7 @@ date: 2020-07-30 10:40:04
 tags:
 categories:
 ---
+- [earth 风、气象、海洋状况](https://earth.nullschool.net/zh-cn/#current/space/surface/level/anim=off/overlay=aurora/orthographic=-245.44,31.70,2940/loc=118.821,37.592)
 
 - [Vue Apollo](https://apollo.vuejs.org/zh-cn/guide/#%E4%BB%80%E4%B9%88%E6%98%AF-apollo)
 - [labuladong的算法小抄](https://labuladong.gitbook.io/algo/)
@@ -17,3 +18,4 @@ categories:
 - [packal](http://www.packal.org/)
 - [nodelover](https://nodelover.me/courses)
 - [opsschool](http://www.opsschool.org/)
+
