--- a/source/_posts/2020-07-30-Bookmark.md
+++ b/source/_posts/2020-07-30-Bookmark.md
@@ -19,3 +19,4 @@ categories:
 - [nodelover](https://nodelover.me/courses)
 - [opsschool](http://www.opsschool.org/)
 
+- [Javascript Closures](http://jibbering.com/faq/notes/closures/)
