--- a/source/_posts/2020-09-27-canvas画水印.md
+++ b/source/_posts/2020-09-27-canvas画水印.md
@@ -32,8 +32,8 @@ export default {
       ctx.fillStyle = 'rgba(255, 255, 255, 0.3)' // 水印字体颜色
       ctx.textAlign = 'center'
       ctx.rotate(-30 * Math.PI / 180) // 水印偏转角度
-      ctx.fillText(this.currentUser.nickName, 30, 60)
-      ctx.fillText(getDateStr(0), 30, 90)
+      ctx.fillText('my nickName', 30, 60)
+      ctx.fillText('2020-09-27', 30, 90)
       const src = canvas.toDataURL('image/png')
       this.maskFullDiv.style.position = 'fixed'
       this.maskFullDiv.style.zIndex = '9999'
