--- a/source/_posts/2020-09-30-中秋快乐.md
+++ b/source/_posts/2020-09-30-中秋快乐.md
@@ -4,6 +4,6 @@ date: 2020-09-30 16:15:34
 tags:
 categories:
 ---
-{% asset_img mooncake.png MoonCake %}
+{% asset_img mooncake.jpg MoonCake %}
 
 中秋八天乐
